# CSCaseVisualizer

./: .gitignore  README.md  package.json  test.html
src/: calculate.css  index.css  index.html  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dumps.rs  inventory.rs  main.rs
web/: index.css  index.html  index.js
web/pages/: calculate.css  calculate.html  calculate.js
